TERCEIRO COMMIT COM DBASE EM FIREBIRD PLUS README FILE

--- a/src/main/resources/annotations/HOW_TO_DEPLOY.html
+++ b/src/main/resources/annotations/HOW_TO_DEPLOY.html
@@ -102,6 +102,9 @@ https://docs.github.com/en/github/authenticating-to-github/generating-a-new-ssh-
 -----> 3º ADD O DIRETORIO REMOTO AS CONFIGS DO BASH
 -----> git remote add origin https://github.com/cleidson-machado/aw-odonto-web-app.git
 
+-----> 4º ENVIO DOS ARQUIVOS AO REMOTO -- DESTINO e depois ORIGEM
+-----> git push -u origin master
+
 -----> VISUALIZAR OS REMOTOS DE CADA PASTA
 git remote -v
 git remote
