QUARTO COMMIT COM DBASE EM POSTGRESQL

--- a/src/main/resources/annotations/How_to.html
+++ b/src/main/resources/annotations/How_to.html
@@ -150,7 +150,13 @@ GIT HUB E OU OUTRA FORMA DE VERSIONAR MAIS SIMPLES / GRATUITA / BACKUP E PUBLICA
 ##### COMO CONFIGURAR UM SERVIDOR FIREBIRD NA AMAZON?
 https://www.youtube.com/watch?v=_xiXP2ImPAg
 https://youtu.be/_xiXP2ImPAg
+
+---------------------------------
 ##### ENCONTRAR UMA FORMA DE PUBLICAÇÃO INICIAL GRATUITA E AFINS...
+----> USANDO A DUPLA Heroku e Git_Hub
+----> COM A "DESVANTAGEM" DE SÓ FUNCIONAR GRATUITO COM POSTGRE
+----> VIDEO QUE NUMA PARTE ENSINA COMO CONFIG O PROJETO DE DEPLOY DO Heroku com AS
+----> ALTERAÇÕES DE DE PUBLICACAO DA BASE NO POSTGRES
 ---------------------------------
 
 
