--- a/src/main/resources/annotations/HOW_TO_DEPLOY.html
+++ b/src/main/resources/annotations/HOW_TO_DEPLOY.html
@@ -29,7 +29,7 @@ DELET APP ------> heroku apps:destroy --app NOME_APP --confirm NOME_APP
 ------> obs: comando acima já cria no GIT também
 
 #---> CREATE A NEW DATA BASE INSTANCE... FREE IS ONLY FOR POSTEGRESS DATA BASE
-------> heroku addons:create heroku-postgresql:hobby-dev
+------> heroku addons:create heroku-postgresql:hobby-dev -a aw-odonto-web-app
 
 #---> SEND APP TO HOSTING SERVICE
 ------> git push heroku master
